# p9fs

./: Cargo.toml  README.md
.github/buildomat/jobs/: build-and-check.sh
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  proto.rs
p9kp/: Cargo.toml
p9kp/src/: client.rs  lib.rs  main.rs
