[package]
name = "p9ds"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5"
serde = { version = "1", features = [ "derive" ] }
serde_repr = "0.1"
thiserror = "1"

ispf = { git = "https://github.com/oxidecomputer/ispf" }
